<resources>
    <string name="app_name">OLX App</string>
    <string name="title_activity_meus_anuncios">MeusAnunciosActivity</string>

    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="logar">Logar</string>
    <string name="cadastre_se">Cadastre-se</string>
    <string name="acessar">Acessar</string>
    <string name="meus_anuncios">Meus anúncios</string>
    <string name="sair">Sair</string>
    <string name="cadastrar_entrar">Cadastrar / Entrar</string>
    <string name="titulo">Título</string>
    <string name="valor">Valor</string>
    <string name="descricao">Descrição</string>
    <string name="hint_phone_number">Telefone</string>
</resources>
