<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".activity.CadastrarAnuncioActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClickImg"
            app:srcCompat="@drawable/padrao" />

        <ImageView
            android:id="@+id/img2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClickImg"
            app:srcCompat="@drawable/padrao" />

        <ImageView
            android:id="@+id/img3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClickImg"
            app:srcCompat="@drawable/padrao" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/spUF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Spinner
            android:id="@+id/spCategoria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <EditText
        android:id="@+id/editTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_edit_text"
        android:ems="10"
        android:hint="@string/titulo"
        android:inputType="textPersonName"
        android:padding="10dp" />

    <com.blackcat.currencyedittext.CurrencyEditText
        android:id="@+id/editValor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_edit_text"
        android:ems="10"
        android:hint="@string/valor"
        android:inputType="textPersonName"
        android:padding="10dp"
        />

    <com.santalu.maskedittext.MaskEditText
        android:id="@+id/editTelefone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_phone_number"
        android:inputType="phone"
        app:met_mask="+55(##) #####-####"
        android:background="@drawable/bg_edit_text"
        android:layout_marginBottom="16dp"
        android:padding="10dp"
        />

    <EditText
        android:id="@+id/editDescricao"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_edit_text"
        android:ems="10"
        android:hint="@string/descricao"
        android:inputType="textPersonName"
        android:padding="10dp" />

    <Button
        android:id="@+id/btnCadastrarAnuncio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Cadastrar anúncio"
        android:theme="@style/botaoPadrao" />

</LinearLayout>